--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <app-navbar></app-navbar>
 <!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
+<div id="loader-wrapper" style="display: none;"></div>
+<div class="content-block">
   <!-- Main content -->
   <section class="content"> 
      <router-outlet></router-outlet> 
   </section>
 </div>
+
 <app-footer></app-footer>
