--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,16 +3,16 @@
     <div class="footer-top">
       <div class="row">
         <div class="col-sm-6 col-md-3 col-xs-b30 col-md-b0">
-          <img src="img/logo-1.png" alt="">
+          <img src="../../../assets/img/logo-1.png" alt="">
           <div class="empty-space col-xs-b20"></div>
           <div class="simple-article size-2 light fulltransparent">Integer posuere orci sit amet feugiat pellent que.
             Suspendisse vel tempor justo, sit amet posuere orci dapibus auctor</div>
           <div class="empty-space col-xs-b20"></div>
           <div class="footer-contact"><i class="fa fa-mobile" aria-hidden="true"></i> contact us: <a href="tel:+35235551238745">+3
               (523) 555 123 8745</a></div>
-          <div class="footer-contact"><i class="fa fa-envelope-o" aria-hidden="true"></i> email: <a href="mailto:office@exzo.com">office@exzo.com</a></div>
-          <div class="footer-contact"><i class="fa fa-map-marker" aria-hidden="true"></i> address: <a href="#">1st, new
-              york, usa</a></div>
+          <div class="footer-contact"><i class="fa fa-envelope-o" aria-hidden="true"></i> email: <a href="mailto:office@exzo.com">office@RT4.com</a></div>
+          <div class="footer-contact"><i class="fa fa-map-marker" aria-hidden="true"></i> address: <a href="#">INSAT, Tunis
+              , Tunisia</a></div>
         </div>
         <div class="col-sm-6 col-md-3 col-xs-b30 col-md-b0">
           <h6 class="h6 light">queck links</h6>
@@ -20,23 +20,12 @@
           <div class="footer-column-links">
             <div class="row">
               <div class="col-xs-6">
-                <a href="#">home</a>
-                <a href="#">about us</a>
-                <a href="#">products</a>
-                <a href="#">services</a>
-                <a href="#">blog</a>
-                <a href="#">gallery</a>
-                <a href="#">contact</a>
+                <a routerLink="/home">home</a>
+                <a routerLink="/about">about us</a>
+                <a routerLink="/products">products</a>
+                <a routerLink="/contact">contact</a>
               </div>
-              <div class="col-xs-6">
-                <a href="#">privacy policy</a>
-                <a href="#">warranty</a>
-                <a href="#">login</a>
-                <a href="#">registration</a>
-                <a href="#">delivery</a>
-                <a href="#">pages</a>
-                <a href="#">our stores</a>
-              </div>
+
             </div>
           </div>
         </div>
@@ -45,21 +34,21 @@
           <h6 class="h6 light">some posts</h6>
           <div class="empty-space col-xs-b20"></div>
           <div class="footer-post-preview clearfix">
-            <a class="image" href="#"><img src="img/thumbnail-1.jpg" alt=""></a>
+            <a class="image" href="#"><img src="../../../assets/img/thumbnail-1.jpg" alt=""></a>
             <div class="description">
               <div class="date">apr 07 / 15</div>
               <a class="title">Fusce tincidunt accumsan pretium sit amet</a>
             </div>
           </div>
           <div class="footer-post-preview clearfix">
-            <a class="image" href="#"><img src="img/thumbnail-2.jpg" alt=""></a>
+            <a class="image" href="#"><img src="../../../assets/img/thumbnail-2.jpg" alt=""></a>
             <div class="description">
               <div class="date">apr 07 / 15</div>
               <a class="title">Fusce tincidunt accumsan pretium sit amet</a>
             </div>
           </div>
           <div class="footer-post-preview clearfix">
-            <a class="image" href="#"><img src="img/thumbnail-3.jpg" alt=""></a>
+            <a class="image" href="#"><img src="../../../assets/img/thumbnail-3.jpg" alt=""></a>
             <div class="description">
               <div class="date">apr 07 / 15</div>
               <a class="title">Fusce tincidunt accumsan pretium sit amet</a>
@@ -89,8 +78,8 @@
     <div class="footer-bottom">
       <div class="row">
         <div class="col-lg-8 col-xs-text-center col-lg-text-left col-xs-b20 col-lg-b0">
-          <div class="copyright">© 2015 All rights reserved. Development by <a href="http://themeforest.net/user/unionagency"
-              target="_blank">UnionAgency</a></div>
+          <div class="copyright">© 2018 All rights reserved. Development by <a
+              target="_blank">Hamdi & Rahma</a></div>
           <div class="follow">
             <a class="entry" href="#"><i class="fa fa-facebook"></i></a>
             <a class="entry" href="#"><i class="fa fa-twitter"></i></a>
@@ -101,12 +90,12 @@
         </div>
         <div class="col-lg-4 col-xs-text-center col-lg-text-right">
           <div class="footer-payment-icons">
-            <a class="entry"><img src="img/thumbnail-4.jpg" alt=""></a>
-            <a class="entry"><img src="img/thumbnail-5.jpg" alt=""></a>
-            <a class="entry"><img src="img/thumbnail-6.jpg" alt=""></a>
-            <a class="entry"><img src="img/thumbnail-7.jpg" alt=""></a>
-            <a class="entry"><img src="img/thumbnail-8.jpg" alt=""></a>
-            <a class="entry"><img src="img/thumbnail-9.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-4.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-5.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-6.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-7.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-8.jpg" alt=""></a>
+            <a class="entry"><img src="../../../assets/img/thumbnail-9.jpg" alt=""></a>
           </div>
         </div>
       </div>
