--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,34 @@
-<p>
-  register works!
-</p>
+<div class="popup-content" data-rel="2">
+  <div class="layer-close"></div>
+  <div class="popup-container size-1">
+    <div class="popup-align">
+      <h3 class="h3 text-center">register</h3>
+      <div class="empty-space col-xs-b30"></div>
+      <input class="simple-input" type="text" value="" placeholder="Your name">
+      <div class="empty-space col-xs-b10 col-sm-b20"></div>
+      <input class="simple-input" type="text" value="" placeholder="Your email">
+      <div class="empty-space col-xs-b10 col-sm-b20"></div>
+      <input class="simple-input" type="password" value="" placeholder="Enter password">
+      <div class="empty-space col-xs-b10 col-sm-b20"></div>
+      <input class="simple-input" type="password" value="" placeholder="Repeat password">
+      <div class="empty-space col-xs-b10 col-sm-b20"></div>
+      <div class="row">
+        <div class="col-sm-7 col-xs-b10 col-sm-b0">
+          <div class="empty-space col-sm-b15"></div>
+          <label class="checkbox-entry">
+            <input type="checkbox"><span><a href="#">Privacy policy agreement</a></span>
+          </label>
+        </div>
+        <div class="col-sm-5 text-right">
+          <a class="button size-2 style-3" href="#">
+            <span class="button-wrapper">
+              <span class="icon"><img src="../../../assets/img/icon-4.png" alt=""></span>
+              <span class="text">submit</span>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="button-close"></div>
+  </div>
+</div>
