--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!-- Content Wrapper. Contains page content -->
 <div id="loader-wrapper" style="display: none;"></div>
 <div class="content-block">
+  <app-products-list></app-products-list>
   <!-- Main content -->
   <section class="content"> 
      <router-outlet></router-outlet> 
