--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -157,7 +157,7 @@
                         <div class="countdown initialized" data-end="Sep,1,2017">
                           <div class="ClassyCountdown-wrapper">
                             <div *ngFor="let count of countDown" class="ClassyCountdown-{{count}}" style="height: 80px;">
-                              <div style="display: inline; height: 80px; width: 80px;"><canvas width="80" height="80"></canvas><input
+                              <div style="display: inline;"><canvas width="80" height="80"></canvas><input
                                   type="text" readonly="readonly" style="display: none; width: 0px; visibility: hidden;"></div><span
                                 class="ClassyCountdown-value" style="color: rgb(52, 52, 52); margin-top: -18px; font-size: 18px;">
                                 <div>0</div><span style="font-size: 0.5em;color:#888;text-transform: uppercase;">{{count}}</span>
