--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,8 +7,9 @@
           <div class="entry"><b>email:</b> <a href="mailto:office@exzo.com">office@RT4.com</a></div>
         </div>
         <div class="col-md-7 col-md-text-right">
-          <div class="entry"><a class="open-popup" data-rel="1"><b>login</b></a>&nbsp; or &nbsp;<a class="open-popup"
-              data-rel="2"><b>register</b></a></div>
+          <div  class="entry"><a class="open-popup" data-rel="1"><b>login</b></a>&nbsp;
+            or &nbsp;<a class="open-popup" data-rel="2"><b>register</b></a></div>
+          <div  class="entry"><a (click)="auth.signOut()"><b>logout</b></a></div>
           <div class="entry language">
             <div><b>en</b></div>
           </div>
@@ -51,5 +52,4 @@
 
     </div>
   </div>
-
 </header>
