--- a/src/app/components/products-list/product-details/product-details.component.html
+++ b/src/app/components/products-list/product-details/product-details.component.html
@@ -108,8 +108,8 @@
           </div>
           <div class="row m5 col-xs-b40">
             <div class="col-sm-6 col-xs-b10 col-sm-b0">
-              <a class="button size-2 style-2 block" href="#">
-                <span class="button-wrapper">
+              <a class="button size-2 style-2 block" (click)="addToCart()">
+                <span class="button-wrapper" >
                   <span class="icon"><img src="../../../../assets/img/icon-2.png" alt=""></span>
                   <span class="text">add to cart</span>
                 </span>
