--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="content-block">
   <app-navbar></app-navbar>
   <div class="header-empty-space"></div>
+  <flash-messages></flash-messages>
   <router-outlet></router-outlet>
 </div>
 
