--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="popup-content" data-rel="1">
+<div class="popup-content" id="popup-content" data-rel="1">
   <div class="layer-close"></div>
   <div class="popup-container size-1">
     <div class="popup-align">
@@ -37,13 +37,3 @@
 </div>
 
 
-<!-- User logged in -->
-<ng-template #authenticated>
-  <div *ngIf="auth.user | async as user">
-    <h3>Howdy, {{ user.displayName }}</h3>
-    <img  [src]="user.photoURL">
-    <p>UID: {{ user.uid }}</p>
-    <p>Favorite Color: {{ user?.favoriteColor }} </p>
-    <button (click)="auth.signOut()">Logout</button>
-  </div>
-  </ng-template>
