--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -236,7 +236,8 @@
           <span class="icon"><img src="../../../assets/img/icon-4.png" alt=""></span>
           <span class="text">place order</span>
         </span>
-        <input type="submit">
+        <input type="submit" (click)="createCommande()">
+       
       </div>
     </div>
   </div>
