--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 col-md-pull-9">
+<<div class="col-md-3 col-md-pull-9">
   <div class="h4 col-xs-b10">popular categories</div>
   <ul class="categories-menu transparent">
     <li>
