--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -30,7 +30,7 @@
                                     <div class="h6 animate-to-green"><a href="#">{{prod.name}}</a></div>
                                 </div>
                                 <div class="preview">
-                                    <img src="{{prod.src}}" alt="">
+                                    <img src="{{prod.views[0]}}" alt="">
                                     <div class="preview-buttons valign-middle">
                                         <div class="valign-middle-content">
                                             <a class="button size-2 style-2" routerLink="/products/{{prod.id}}">
