--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -154,7 +154,7 @@
     <div class="col-md-6">
       <h4 class="h4 col-xs-b25">your order</h4>
       <div *ngFor="let order of orders" class="cart-entry clearfix">
-        <a class="cart-entry-thumbnail" href="#"><img src="../../../assets/img/{{order.img}}" alt=""></a>
+        <a class="cart-entry-thumbnail" href="#"><img style="height: 120px; width: 100px" src="{{order.views[0]}}" alt=""></a>
         <div class="cart-entry-description">
           <table>
             <tbody>
