--- a/src/app/components/user-profil/user-profil.component.html
+++ b/src/app/components/user-profil/user-profil.component.html
@@ -1,3 +1,5 @@
+<div class="empty-space col-xs-b35 col-md-b70"></div>
+
 <div *ngIf="auth.user | async; then authenticated else guest">
   <!-- template will replace this div -->
 </div>
@@ -17,14 +19,20 @@
 
 <!-- User logged in -->
 <ng-template #authenticated>
-<div *ngIf="auth.user | async as user">
-  <h3>Howdy, {{ user.displayName }}</h3>
-  <button class="btn-primary" (click)="getCommande()">send</button>
-  <img  [src]="user.photoURL">
-  <p>UID: {{ user.uid }}</p>
-  <p>Favorite Color: {{ user?.favoriteColor }} </p>
-  <button (click)="auth.signOut()">Logout</button>
+<div class="card" *ngIf="auth.user | async as user">
+  <img [src]="user.photoURL" alt="John" style="width:100%">
+  <h1>{{ user.displayName }}</h1>
+  <p class="title">{{ user.uid }}</p>
+  <p></p>
+  <a href="#"><i class="fa fa-dribbble"></i></a> 
+  <a href="#"><i class="fa fa-twitter"></i></a> 
+  <a href="#"><i class="fa fa-linkedin"></i></a> 
+  <a href="#"><i class="fa fa-facebook"></i></a> 
+  <p><button>Logout</button></p>
 </div>
 </ng-template>
-
+<br><br><br><br>
+<div class="container" style="margin-bottom: -15rem; margin-left: 150px">
+  <div class="h2">MY<span class="color">ORDERS</span></div>
+</div>
 <app-commande-table></app-commande-table>
