--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -164,7 +164,7 @@
                   <div class="simple-article size-1">QUANTITY: {{order.quantity}}</div>
                 </td>
                 <td>
-                  <div class="simple-article size-3 grey">{{order.prixUnitaire}} DT</div>
+                  <div class="simple-article size-3 grey">{{order.prix}} DT</div>
                   <div class="simple-article size-1">TOTAL: {{order.total}} DT</div>
                 </td>
                 <td>
