--- a/src/app/components/user-profil/user-profil.component.html
+++ b/src/app/components/user-profil/user-profil.component.html
@@ -22,6 +22,7 @@
 <div class="card" *ngIf="auth.user | async as user">
   <img [src]="user.photoURL" alt="John" style="width:100%">
   <h1>{{ user.displayName }}</h1>
+  <h1>{{ user.email }}</h1>
   <p class="title">{{ user.uid }}</p>
   <p></p>
   <a href="#"><i class="fa fa-dribbble"></i></a> 
