--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -23,7 +23,7 @@
                 <div class="products-content">
                     <div class="products-wrapper">
                         <div class="row nopadding">
-                            <div class="col-sm-4" *ngFor="let prod of products[0] | filter : searchText">
+                            <div class="col-sm-4" *ngFor="let prod of products[0] | paginate: { itemsPerPage:5, currentPage:p} | filter : searchText">
                                 <div class="product-shortcode style-1">
                                     <div class="title">
                                         <div class="simple-article size-1 color col-xs-b5"><a href="#">{{prod.category}}</a></div>
@@ -67,6 +67,7 @@
                                 </div>
                             </div>
                         </div>
+                        <pagination-controls  (pageChange)="p= $event"></pagination-controls>
                     </div>
                 </div>
                 <div class="empty-space col-xs-b35 col-sm-b0"></div>
