--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -70,17 +70,8 @@
                         <pagination-controls  (pageChange)="p= $event"></pagination-controls>
                     </div>
                 </div>
-                <div class="empty-space col-xs-b35 col-sm-b0"></div>
-                <div class="row">
-                    <div class="col-sm-3 hidden-xs">
-                        <a class="button size-1 style-5" href="#">
-                            <span class="button-wrapper">
-                                <span class="icon"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-                                <span class="text">prev page</span>
-                            </span>
-                        </a>
-                    </div>
-                    
+        
+                <div class="empty-space col-xs-b35 col-md-b70"></div>
                 <div class="empty-space col-md-b70"></div>
             </div>
             <app-sidebar></app-sidebar>
